add hehe version
full task as in the TASK2023...